# sysinfo_testing

./: .hgignore  Cargo.toml  README.md
cpp_cmdline_getter/: .clang-format  CMakeLists.txt  main.c  main.cpp  not_found.cpp  ph_defines.h  ph_funcs.c  ph_funcs.h  ph_types.h  ph_variables.c  ph_variables.h  sys_func.h
run_scripts/: CMakeLists.txt  handle.hpp  main.cpp
rust_cmdline_getter/: rustfmt.toml
rust_cmdline_getter/src/: main.rs
rust_new_approach/: Cargo.toml
rust_new_approach/src/: main.rs
src/: lib.rs  main.rs
